workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TipoLimiteCapital__c.field-meta.xml
<CustomField>
    <fullName>TipoLimiteCapital__c</fullName>
    <label>Tipo de limite do capital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maior valor entre garantias</fullName>
            </value>
            <value>
                <fullName>Maior valor entre garantias/360</fullName>
            </value>
            <value>
                <fullName>Monetário</fullName>
            </value>
            <value>
                <fullName>Percentual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>