workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TipoPagamento__c.field-meta.xml
<CustomField>
    <fullName>TipoPagamento__c</fullName>
    <label>Tipo de pagamento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antecipação</fullName>
            </value>
            <value>
                <fullName>Auxílio alimentação</fullName>
            </value>
            <value>
                <fullName>À vista</fullName>
            </value>
            <value>
                <fullName>Cesta básica</fullName>
            </value>
            <value>
                <fullName>Complemento</fullName>
            </value>
            <value>
                <fullName>Diária</fullName>
            </value>
            <value>
                <fullName>Reembolso</fullName>
            </value>
            <value>
                <fullName>Renda</fullName>
            </value>
            <value>
                <fullName>Serviços</fullName>
            </value>
            <value>
                <fullName>Sorteio</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>