workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TipoPrazoMaximoLiquidacao__c.field-meta.xml
<CustomField>
    <fullName>TipoPrazoMaximoLiquidacao__c</fullName>
    <label>Tipo de prazo máximo para liquidação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dia</fullName>
            </value>
            <value>
                <fullName>Mês</fullName>
            </value>
            <value>
                <fullName>Ano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>