workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TipoReintegracao__c.field-meta.xml
<CustomField>
    <fullName>TipoReintegracao__c</fullName>
    <label>Tipo de reintegração</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigência</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
            <value>
                <fullName>Evento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>