workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TipoValor__c.field-meta.xml
<CustomField>
    <fullName>TipoValor__c</fullName>
    <label>Tipo de valor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valor fixo</fullName>
            </value>
            <value>
                <fullName>Percentual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>