workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/ValorFinal__c.field-meta.xml
<CustomField>
    <fullName>ValorFinal__c</fullName>
    <label>Valor final</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>