workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/ValorFixo__c.field-meta.xml
<CustomField>
    <fullName>ValorFixo__c</fullName>
    <description>Campo para o preenchimendo do valor em reais ao selecionat o tipo &quot;valor fixo&quot; nas informações do prestador</description>
    <label>Valor fixo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>