workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/ValorInicial__c.field-meta.xml
<CustomField>
    <fullName>ValorInicial__c</fullName>
    <label>Valor inicial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>