workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/ValorPercentual__c.field-meta.xml
<CustomField>
    <fullName>ValorPercentual__c</fullName>
    <description>Campo para o preenchimendo do valor em reais ao selecionat o tipo &quot;percentual&quot; nas informações do prestador</description>
    <label>Valor percentual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>