workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/ValorServico__c.field-meta.xml
<CustomField>
    <fullName>ValorServico__c</fullName>
    <label>Valor do serviço</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>