workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/ValorTitulo__c.field-meta.xml
<CustomField>
    <fullName>ValorTitulo__c</fullName>
    <inlineHelpText>Cod.167 - Mínimo de R$ 0,10 e máximo de R$ 2,00 (1 sorteio) 
Cod.171 - Mínimo de R$ 0,12 e máximo de R$ 4,00 (2 sorteios) 
Cod.168 - Mínimo de R$ 0,80 e máximo de R$ 8,00 (4 sorteios)
Cod. VI010 - R$ 0,03 (1 sorteio)</inlineHelpText>
    <label>Custo do título de capitalização</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>