workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/ValorVidaAtiva__c.field-meta.xml
<CustomField>
    <fullName>ValorVidaAtiva__c</fullName>
    <label>Valor por vida ativa</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>