workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/VigenciaGarantia__c.field-meta.xml
<CustomField>
    <fullName>VigenciaGarantia__c</fullName>
    <label>Vigência da Garantia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mesma da apólice</fullName>
            </value>
            <value>
                <fullName>Contratação até fim da apólice</fullName>
            </value>
            <value>
                <fullName>Contratação até início da apólice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>