workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/BloquearAlteracaoGarantiaLimitadora.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearAlteracaoGarantiaLimitadora</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
    NOT(ISBLANK(GarantiaProduto__r.GarantiaLimitadora__c)),
    GarantiaLimitadora__c &lt;&gt; GarantiaProduto__r.GarantiaLimitadora__c
)</errorConditionFormula>
    <errorMessage>Garantia limitadora não pode ser alterada</errorMessage>
</ValidationRule>