workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/BloquearPreenchimentoFormaInformado.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearPreenchimentoFormaInformado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
    ISPICKVAL(FormaExibicaoCapital__c, &apos;Valor informado&apos;),
    ISPICKVAL(FormaExibicaoCapital__c, &apos;Valor fixo&apos;),
    OR(
       NOT(ISBLANK(Intervalo__c)),
       NOT(ISBLANK(ValorInicial__c)),
       NOT(ISBLANK(ValorFinal__c)) 
    )
)</errorConditionFormula>
    <errorMessage>Os campos Intervalo, Valor inicial e Valor final não devem ser preenchidos para esta forma de capital</errorMessage>
</ValidationRule>