workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/BloqueiaDependentesCancelar.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaDependentesCancelar</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(CancelaDependentes__c),
    NOT(ISBLANK(DependentesCancelar__c))
)</errorConditionFormula>
    <errorMessage>O campo Dependentes para cancelar somente poderá ser preenchido se o campo Cancela dependentes estiver preenchido</errorMessage>
</ValidationRule>