workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/Informacoes_de_sinistro_Benefico.validationRule-meta.xml
<ValidationRule>
    <fullName>Informacoes_de_sinistro_Benefico</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
	(Sem_Acao__c  &amp;&amp; (Controle_de_Uso_Saldo__c  || CancelaSegurado__c  || CancelaGarantia__c ))
||  (Controle_de_Uso_Saldo__c  &amp;&amp; (Sem_Acao__c  || CancelaSegurado__c  || CancelaGarantia__c ))
||  (CancelaSegurado__c  &amp;&amp; (Sem_Acao__c || Controle_de_Uso_Saldo__c  || CancelaGarantia__c ))
||  (CancelaGarantia__c  &amp;&amp; (Sem_Acao__c  || Controle_de_Uso_Saldo__c   || CancelaSegurado__c ))
	, true,  false
)</errorConditionFormula>
    <errorMessage>Em &quot;informações de sinistro beneficio&quot;. Preencher apenas uma opção entre 
Sem Ação, Cancela Segurado, Cancela garantia e Controle de uso de saldo.</errorMessage>
</ValidationRule>