workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigaMomentoCancelamento.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaMomentoCancelamento</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
  OR( 
						CancelaDependentes__c = TRUE, 
					 CancelaGarantia__c = TRUE,
						CancelaSegurado__c = TRUE
		),
  ISPICKVAL(MomentoCancelamento__c, &apos;&apos;),
		ISPICKVAL(Produto__r.Status__c, &apos;Ativo&apos;) 
)</errorConditionFormula>
    <errorMessage>Campo Momento do Cancelamento sem preenchimento</errorMessage>
</ValidationRule>