workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigaPreenchimentoCodigoPromocao.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaPreenchimentoCodigoPromocao</fullName>
    <active>true</active>
    <description>Preencha o Código da promoção para este tipo de código da promoção</description>
    <errorConditionFormula>ISPICKVAL( TipoCaracteristicaEspecial__c , &quot;Sorteio&quot;)  &amp;&amp; 
ISBLANK( TEXT(CodigoPromocao__c) )</errorConditionFormula>
    <errorDisplayField>CodigoPromocao__c</errorDisplayField>
    <errorMessage>Código da promoção obrigatório para este tipo de característica especial</errorMessage>
</ValidationRule>