workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigaPreenchimentoCustoCaractEspecial.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaPreenchimentoCustoCaractEspecial</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( TipoCaracteristicaEspecial__c , &quot;Assessoria&quot;)  &amp;&amp; 
ISBLANK( TEXT( CustoCaracteristicaEspecial__c ) )</errorConditionFormula>
    <errorDisplayField>CustoCaracteristicaEspecial__c</errorDisplayField>
    <errorMessage>Custo da característica especial obrigatória para este tipo de característica especial</errorMessage>
</ValidationRule>