workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigaPreenchimentoCustoTituloCapitaliz.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaPreenchimentoCustoTituloCapitaliz</fullName>
    <active>true</active>
    <description>Código da promoção obrigatório para este custo do título de capitalização</description>
    <errorConditionFormula>ISPICKVAL( TipoCaracteristicaEspecial__c , &quot;Sorteio&quot;)  &amp;&amp; 
ISBLANK( TEXT(  ValorTitulo__c ) )</errorConditionFormula>
    <errorMessage>Custo do titulo de capitalização obrigatório para este tipo de característica especial</errorMessage>
</ValidationRule>