workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigaPreenchimentoMinimoMaximoCapital.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaPreenchimentoMinimoMaximoCapital</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(TipoLimiteCapital__c, &apos;Monetário&apos;),
    OR(
       ISBLANK(LimiteCapitalMinimo__c), 
       ISBLANK(LimiteCapitalMaximo__c)
    )
)</errorConditionFormula>
    <errorMessage>Preencha o limite mínimo e máximo de capital para este tipo de capital</errorMessage>
</ValidationRule>