workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigaPreenchimentoPercentualCapital.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaPreenchimentoPercentualCapital</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(TipoLimiteCapital__c, &apos;Percentual&apos;),
    OR(
       ISBLANK(PercentualCapitalMinimo__c), 
       ISBLANK(PercentualCapitalMaximo__c)
    )
)</errorConditionFormula>
    <errorMessage>Preencha o percentual mínimo e máximo de capital para este tipo de capital</errorMessage>
</ValidationRule>