workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPercentualMaximoCancelamento.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPercentualMaximoCancelamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    CancelaGarantia__c,
    ISBLANK(PercentualMaximoCancelamento__c)
)</errorConditionFormula>
    <errorMessage>Preencha o percentual máximo para cancelamento</errorMessage>
</ValidationRule>