workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPreenchimentoCodigoPromocao.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoCodigoPromocao</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;ProdutoComercial&quot; &amp;&amp;
ISPICKVAL(TipoCaracteristicaEspecial__c , &quot;Sorteio&quot;)&amp;&amp;              ISPICKVAL(CodigoPromocao__c , &quot;&quot;)</errorConditionFormula>
    <errorMessage>Campo Código da Promoção deve ser preenchidos para esta forma de capital</errorMessage>
</ValidationRule>