workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPreenchimentoCustoCapitalizacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoCustoCapitalizacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &quot;ProdutoComercial&quot;, 
NOT(ISNEW()), 
ISPICKVAL(TipoCaracteristicaEspecial__c , &quot;Sorteio&quot;), 
ISBLANK( ValorTitulo__c ) 
)</errorConditionFormula>
    <errorMessage>Campo Custo do título de capitalização obrigatório deve ser preenchidos para esta forma de capital</errorMessage>
</ValidationRule>