workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPreenchimentoFormaLista.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoFormaLista</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
    ISPICKVAL(FormaExibicaoCapital__c, &apos;Lista&apos;),
    OR(
       ISBLANK(Intervalo__c),
       ISBLANK(ValorInicial__c),
       ISBLANK(ValorFinal__c)
    )
)</errorConditionFormula>
    <errorMessage>Os campos Intervalo, Valor inicial e Valor final devem ser preenchidos para esta forma de capital</errorMessage>
</ValidationRule>