workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPreenchimentoLimiteMaxEspecial.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoLimiteMaxEspecial</fullName>
    <active>true</active>
    <description>O campo Limite máximo de característica especial não deve ser obrigatório quando o tipo sorteio for selecionado no campo tipo de característica especial.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;ProdutoComercial&quot;,
    NOT(ISPICKVAL(TipoCaracteristicaEspecial__c , &quot;&quot;)),
    NOT(ISPICKVAL(TipoCaracteristicaEspecial__c , &quot;Sorteio&quot;)),               
    ISBLANK( LimiteMaximoCaracteristicaEspecial__c)
)</errorConditionFormula>
    <errorMessage>Campo Limite máximo de característica especial deve ser preenchidos para esta forma de capital</errorMessage>
</ValidationRule>