workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPreenchimentoLimiteMinEspecial.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoLimiteMinEspecial</fullName>
    <active>true</active>
    <description>O campo Limite mínimo de característica especial não deve ser obrigatório quando o tipo sorteio for selecionado no campo tipo de característica especial.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;ProdutoComercial&quot;,
    NOT(ISPICKVAL(TipoCaracteristicaEspecial__c , &quot;&quot;)),
    NOT(ISPICKVAL(TipoCaracteristicaEspecial__c , &quot;Sorteio&quot;)),               
    ISBLANK(LimiteMinimoCaracteristicaEspecial__c)
)</errorConditionFormula>
    <errorMessage>Campo Limite mínimo de característica especial deve ser preenchidos para esta forma de capital</errorMessage>
</ValidationRule>