workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPreenchimentoLimiteReintegracoes.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoLimiteReintegracoes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    INCLUDES(TipoReintegracao__c,&apos;Vigência&apos;),
    ISBLANK(LimiteReintegracoes__c) 
)</errorConditionFormula>
    <errorDisplayField>LimiteReintegracoes__c</errorDisplayField>
    <errorMessage>Preencha o limite de reintegrações</errorMessage>
</ValidationRule>