workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPreenchimentoMoeda.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoMoeda</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;ProdutoTecnico&apos;,
    ISPICKVAL(CurrencyIsoCode,&quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Preencha o campo Moeda</errorMessage>
</ValidationRule>