workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPreenchimentoPeriodoTempo.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoPeriodoTempo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(FinalidadeRemissao__c,&apos;&apos;)),
    OR(
       ISPICKVAL(TempoContagem__c,&apos;&apos;),  
       ISBLANK(PeriodoRemissao__c)
    )
)</errorConditionFormula>
    <errorMessage>Preencha o tempo de contagem e o período de remissão</errorMessage>
</ValidationRule>