workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ObrigarPreenchimentoTipoValor.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoTipoValor</fullName>
    <active>true</active>
    <description>Define o campo valor que deverá ser preenchido de acordo com o tipo selecionado</description>
    <errorConditionFormula>OR(AND(IF(ISPICKVAL(TipoValor__c, &quot;Valor fixo&quot;), TRUE, FALSE),
    ISBLANK(ValorFixo__c)),
   AND(IF(ISPICKVAL(TipoValor__c, &quot;Percentual&quot;), TRUE, FALSE),
    ISBLANK(ValorPercentual__c)))</errorConditionFormula>
    <errorMessage>Preencher o campo correto para o tipo de valor selecionado: Para &quot;Valor fixo&quot; preencher o campo Valor fixo e para &quot;Percentual&quot;, preencher o campo Valor percentual</errorMessage>
</ValidationRule>