workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarCancelaSeguradoCancelaGarantia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarCancelaSeguradoCancelaGarantia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    CancelaSegurado__c,
    CancelaGarantia__c,
				Controle_de_Uso_Saldo__c,
				Sem_Acao__c
)</errorConditionFormula>
    <errorMessage>Somente uma das opções entre Cancela segurado e Cancela garantia podem estar marcadas</errorMessage>
</ValidationRule>