workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarCaracEspecMaximoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarCaracEspecMaximoProdutoComercial</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 LimiteMaximoCaracteristicaEspecial__c &gt; GarantiaProduto__r.LimiteMaximoCaracteristicaEspecial__c
)</errorConditionFormula>
    <errorMessage>A Característica especial máxima não pode ser maior do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>