workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarCaracEspecMinimoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarCaracEspecMinimoProdutoComercial</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 LimiteMinimoCaracteristicaEspecial__c &lt; GarantiaProduto__r.LimiteMinimoCaracteristicaEspecial__c
)</errorConditionFormula>
    <errorMessage>A Característica especial mínima não pode ser menor do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>