workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarDependentesCancelar.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarDependentesCancelar</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    CancelaDependentes__c,
    ISBLANK(DependentesCancelar__c) 
)</errorConditionFormula>
    <errorMessage>Preencha o campo Dependentes para cancelar</errorMessage>
</ValidationRule>