workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarLimiteCapitMaximoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteCapitMaximoProdutoComercial</fullName>
    <active>false</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
	TEXT(CurrencyIsoCode) ==	TEXT(GarantiaProduto__r.CurrencyIsoCode),
	NOT(ISBLANK(GarantiaProduto__r.LimiteCapitalMaximo__c)),
 LimiteCapitalMaximo__c &gt; GarantiaProduto__r.LimiteCapitalMaximo__c
)</errorConditionFormula>
    <errorDisplayField>LimiteCapitalMaximo__c</errorDisplayField>
    <errorMessage>O Limite de capital máximo não pode ser maior do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>