workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarLimiteCapitMinimoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteCapitMinimoProdutoComercial</fullName>
    <active>false</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
	TEXT(CurrencyIsoCode) ==	TEXT(GarantiaProduto__r.CurrencyIsoCode),
	NOT(ISBLANK(GarantiaProduto__r.LimiteCapitalMinimo__c)),
 LimiteCapitalMinimo__c &lt; GarantiaProduto__r.LimiteCapitalMinimo__c
)</errorConditionFormula>
    <errorDisplayField>LimiteCapitalMinimo__c</errorDisplayField>
    <errorMessage>O Limite de capital mínimo não pode ser menor do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>