workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarLimiteIdadeMaximoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteIdadeMaximoProdutoComercial</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 LimiteIdadeMaximo__c &gt; GarantiaProduto__r.LimiteIdadeMaximo__c
)</errorConditionFormula>
    <errorMessage>O Limite de idade maxima não pode ser maior do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>