workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarLimiteIdadeMinimoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteIdadeMinimoProdutoComercial</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 LimiteIdadeMinimo__c &lt; GarantiaProduto__r.LimiteIdadeMinimo__c
)</errorConditionFormula>
    <errorMessage>O Limite de idade mínimo não pode ser menor do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>