workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarLimiteMaximoNegativo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMaximoNegativo</fullName>
    <active>true</active>
    <description>Impede que valores negativos sejam cadastrados no campo Limite de Capital Máximo.</description>
    <errorConditionFormula>LimiteCapitalMaximo__c &lt; 0</errorConditionFormula>
    <errorDisplayField>LimiteCapitalMaximo__c</errorDisplayField>
    <errorMessage>Não é permitido cadastrar números negativos para esse campo. Favor, verifique o valor informado.</errorMessage>
</ValidationRule>