workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarLimiteMaximoUtilizacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMaximoUtilizacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND( LimiteMaximoUtilizacao__c &gt; 365 )</errorConditionFormula>
    <errorDisplayField>LimiteMaximoUtilizacao__c</errorDisplayField>
    <errorMessage>O limite máximo de utilização é de 365.</errorMessage>
</ValidationRule>