workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarLimiteMaximoUtilizacaoTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMaximoUtilizacaoTecnico</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 LimiteMaximoUtilizacao__c &gt; GarantiaProduto__r.LimiteMaximoUtilizacao__c
)</errorConditionFormula>
    <errorMessage>O valor de limite máximo de utilização do produto comercial não pode ser maior do que o cadastrado no produto técnico.</errorMessage>
</ValidationRule>