workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarLimiteMinimoMaximoCapital.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMinimoMaximoCapital</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(LimiteCapitalMinimo__c)),
    NOT(ISBLANK(LimiteCapitalMaximo__c)),
    LimiteCapitalMinimo__c &gt; LimiteCapitalMaximo__c 
)</errorConditionFormula>
    <errorMessage>O limite de capital mínimo deve ser inferior ao limite máximo</errorMessage>
</ValidationRule>