workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarLimiteMinimoMaximoIdade.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMinimoMaximoIdade</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(LimiteIdadeMinimo__c)),
    NOT(ISBLANK(LimiteIdadeMaximo__c)),
    LimiteIdadeMinimo__c &gt; LimiteIdadeMaximo__c 
)</errorConditionFormula>
    <errorMessage>O limite de idade mínimo deve ser inferior ao limite máximo</errorMessage>
</ValidationRule>