workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarMoedaDiferente.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarMoedaDiferente</fullName>
    <active>false</active>
    <description>Se a moeda do produto comercial for diferente da moeda do produto técnico
e o limite do capital foi especificado no produto técnico
então não deixa cadastrar essa garantia do produto</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
	TEXT(CurrencyIsoCode) !=	TEXT(GarantiaProduto__r.CurrencyIsoCode),
	OR(
					NOT(ISBLANK(GarantiaProduto__r.LimiteCapitalMaximo__c)),
     NOT(ISBLANK(GarantiaProduto__r.LimiteCapitalMinimo__c))
	)
)</errorConditionFormula>
    <errorMessage>Não é possível cadastrar uma garantia do produto comercial com uma moeda diferente do produto técnico, se a garantia do produto técnico tiver cadastrada limite de capital!</errorMessage>
</ValidationRule>