workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarObrigatoriedadeTipoCapital.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarObrigatoriedadeTipoCapital</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
   RecordType.DeveloperName = &apos;ProdutoTecnico&apos;, 
   IF(
   NOT(ISPICKVAL( DemonstracaoCapital__c, &apos;Serviço Complementar (sem valor de capital)&apos; )) &amp;&amp; ISBLANK(TipoCapital__c),
   true,
   false
   )
)</errorConditionFormula>
    <errorMessage>Tipo de Capital deve ser informado.</errorMessage>
</ValidationRule>