workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarPercAgravoMaximoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPercAgravoMaximoProdutoComercial</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 PercentualAgravoMaximo__c &gt; GarantiaProduto__r.PercentualAgravoMaximo__c
)</errorConditionFormula>
    <errorMessage>O Percentual de agravo máximo não pode ser maior do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>