workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarPercAgravoMinimoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPercAgravoMinimoProdutoComercial</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 PercentualAgravoMinimo__c &lt; GarantiaProduto__r.PercentualAgravoMinimo__c
)</errorConditionFormula>
    <errorMessage>O Percentual de agravo mínimo não pode ser menor do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>