workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarPercDescontMaximoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPercDescontMaximoProdutoComercial</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 PercentualDescontoMaximo__c &gt; GarantiaProduto__r.PercentualDescontoMaximo__c
)</errorConditionFormula>
    <errorMessage>O Percentual de desconto máximo não pode ser maior do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>