workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarPercDescontMinimoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPercDescontMinimoProdutoComercial</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 PercentualDescontoMinimo__c &lt; GarantiaProduto__r.PercentualDescontoMinimo__c
)</errorConditionFormula>
    <errorMessage>O Percentual de desconto mínimo não pode ser menor do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>