workspace-sf/force-app/main/default/objects/GarantiaProduto__c/validationRules/ValidarPercentualCMaximoProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPercentualCMaximoProdutoComercial</fullName>
    <active>true</active>
    <description>Verifica se o valor está de acordo com o produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 PercentualCapitalMaximo__c &gt; GarantiaProduto__r.PercentualCapitalMaximo__c
)</errorConditionFormula>
    <errorMessage>O Percentual de capital máximo não pode ser maior do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>